--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,21 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <declare-styleable name="Slider">
+        <attr name = "barLength" format = "dimension"/>
+        <attr name = "barWidth" format = "dimension"/>
+        <attr name = "cursorDiameter" format = "dimension"/>
+
+        <attr name = "disabled" format = "boolean" />
+
+        <attr name = "barColor" format = "color"/>
+        <attr name = "valueBarColor" format = "color"/>
+        <attr name = "cursorColor" format = "color"/>
+        <attr name = "disabledColor" format = "color"/>
+
+        <attr name = "min" format = "float"/>
+        <attr name = "max" format = "float"/>
+        <attr name = "value" format = "float"/>
+    </declare-styleable>
+
 </resources>
